# Nimloth

./: .cursorignore  .gitignore  .gitmodules  AGENTS.md  AI_README.md  AI_branch_progress.md  AI_issues.md  AI_progress.md  CHANGELOG.md  CLAUDE.md  DESIGN_DOCS.md  README.md  TODO.md  generated_overall_plan.md  plan.md  pyproject.toml  qc_query.md  qc_summarize_progress.md  requirements.txt  skill
.memory/: memories.jsonl
ai_notes/: dev_rules.md  hydra_component_config_conventions.md  main.md  output_visualize_conventions.md  phase2_qwen_llm_joint.md  qwen_joint_training_conventions.md  storage_management_conventions.md  today.txt  wm_collection_walk_recovery_conventions.md
ai_rules/: 01_honesty_and_uncertainty.md  02_memory_and_progress.md  03_experiments_and_data.md  04_code_and_repo.md  05_flower_reference.md  README.md
ai_tasks/: Phase2_eval.md  Phase2_improve.md  WM_refactor.md  continue_dev.md  fix_fsdp_rl_plan.md  interface.md  latent_action_extraction.md  merge_dev.md  phase2_qwen_llm_joint.md  rl_multistep_rollout_plan.md  rl_train.md  sft1_exp.md  sft2_exp.md  sft2_phase2_plan.md  sft2_speedup_plan.md  vagen_baseline.md
archived/: README_Phase5.md  generated_doc.md
configs/: config.yaml  rl_default.yaml  rl_joint.yaml
dev/: README.md  __init__.py  build_eb_nav_aligned_planner_sft.py  build_eb_nav_fork_qwen_correction_sft.py  build_eb_nav_success_history_planner_sft.py  cache_eb_nav_planner_cot_latents.py  calibrate_eb_nav_gate_from_forks.py  collect_eb_nav_random_rollouts.py  collect_eb_nav_uncertainty_fork_rollouts.py  debug_cache.py  precode_qwen.py  (+43 more)
(+605 files in other folders)
