[project]
name = "flower"
version = "0.1.0"
description = "HLWM-MTG Phase1+2 minimal pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "hydra-core",
  "omegaconf",
  "numpy",
  "pillow",
  "ai2thor>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

