[project]
name = "flower"
version = "0.1.0"
description = "HLWM-MTG Phase1+2 minimal pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "hydra-core",
  "omegaconf",
  "numpy",
  "pillow",
  "ai2thor>=5.0.0",
  "wandb",
  "rich",
  "python-dotenv",
  "gradio",
  "transformers>=4.40,<4.50",
  "peft",
  "umap-learn",
  "plotly",
  "xformers>=0.0.29.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
